Release Changelog for VanasKoS

alpha:
- Allow quoted playernames in command line so that realms with spaces work
- Fixed bug when adding player from minimap button
- Updated library versions
- Fixed bug in PvP stats
- Removed libgraph
- Temporarily disabled distributed tracker
- Fixed minimap button

4.26:
- Update toc version
- Fixed small bug in distributed tracker

4.25:
- Bugfixes for changes in Cataclysm
- Store lists per realm/faction (requires import of old VanasKoS data)
- Improved pvp statistics (requires import of old VanasKoS data)
- Added support for cross-server players
- Show mouseover stats for all players regardless of faction
- three new sounds
- Use GetPlayerInfoByGUID when an entry shows up in the combat log
- Added option to dynamically resize the warning window
- Added options to hide warning window in battlegrounds and instances
- Remove "sort" and "pvp stats" buttons
- Added options to notify when a nice/hated player joins the group
- Added option to modify raid browser and friend/ignore list
- Improved background artwork
- Fixed dragon around target frame, and added one for party frames
- Updated libraries
- Save warning frame position to the database
- Added support for context menu for pitbull 4
- Added ability to customize the macro on player name clicks in the warnframe
- Added option to change the length of time data remains in the warnframe
- Added options to change text color of the warnframe
- Fixed displaying eventmap tooltip (broken by Blizzard's Quest POI changes in 3.3)
- Redraw eventmap when a new death is recorded
- Separated localization from source
- Allow name searches in last seen list

4.21:
- Disabled dragon around target frame due to API change

4.21 beta:
- Fixed semi-transparency in KoS GUI texture
- Made Name/Reason the default KoS view
- Added an previous view button
- If a level 10+ player is detected correct level guessing to at least 10+
- Update for 3.3 patch

4.2 beta: